# SIR

./: .gitignore  .travis.yml  ABOUT  CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  Doxyfile  INSTALL  LICENSE  LICENSE.h  Makefile  README.md  README.txt  TODO  TODO.md  _installer_2.7.1.html  _release_2.7.1.html  _release_2.7.2.html  about.html  application.qrc  blog.html  blog.js  contact.html  donate.html  download.html  index.html  installer_2.7.1.html  new_site.html  qrc_application.cpp  release_2.5.1.html  release_2.5.html  release_2.6.html  release_2.7.1.html  release_2.7.2.html  release_2.7.3.html  release_2.7.html  release_2.8.html  release_3.0.html  release_3.1.html  release_3.2.1.html  (+12 more)
src/: CMakeLists.txt  CommandLineAssistant.cpp  CommandLineAssistant.hpp  ConvertEffects.cpp  ConvertEffects.hpp  ConvertSharedData.cpp  ConvertSharedData.hpp  ConvertThread.cpp  ConvertThread.hpp  DetailsThumbnail.cpp  DetailsThumbnail.hpp  EffectsCollector.cpp  EffectsCollector.hpp  ExpressionTree.cpp  ExpressionTree.hpp  LanguageUtils.cpp  LanguageUtils.hpp  MetadataThumbnail.cpp  MetadataThumbnail.hpp  NetworkUtils.cpp  NetworkUtils.hpp  OptionsGroupBoxManager.cpp  OptionsGroupBoxManager.hpp  RawUtils.cpp  RawUtils.hpp  RegExpUtils.cpp  RegExpUtils.hpp  Rgb.cpp  Rgb.hpp  Selection.cpp  Selection.hpp  Session.cpp  Session.hpp  Settings.cpp  Settings.hpp  SharedInformation.cpp  SharedInformation.hpp  SharedInformationBuilder.cpp  SharedInformationBuilder.hpp  SvgModifier.cpp  (+85 more)
src/convert/algorithm/: BytesImageSizeStrategy.cpp  BytesImageSizeStrategy.hpp  ImageSizeComputeResult.cpp  ImageSizeComputeResult.hpp  ImageSizeComputeResultState.cpp  ImageSizeComputeResultState.hpp  ImageSizeComputer.cpp  ImageSizeComputer.hpp  ImageSizeStrategy.cpp  ImageSizeStrategy.hpp  PercentImageSizeStrategy.cpp  PercentImageSizeStrategy.hpp  PixelsImageSizeStrategy.cpp  PixelsImageSizeStrategy.hpp
src/convert/model/: ImageFileSize.cpp  ImageFileSize.hpp  ImageFormat.cpp  ImageFormat.hpp  TargetImage.cpp  TargetImage.hpp  WriteImageFormat.cpp  WriteImageFormat.hpp
src/convert/service/: ImageChangeService.cpp  ImageChangeService.hpp  ImageFileService.cpp  ImageFileService.hpp
src/exceptions/: DeprecatedException.cpp  DeprecatedException.hpp
src/file/: FileInfo.cpp  FileInfo.hpp  TreeWidgetFileInfo.cpp  TreeWidgetFileInfo.hpp
src/image/: ImageWriter.cpp  ImageWriter.hpp  QImageLoader.cpp  QImageLoader.hpp  SvgParameters.cpp  SvgParameters.hpp
src/metadata/: Error.cpp  Error.hpp  Exif.cpp  Exif.hpp  Flash.cpp  Flash.hpp  Iptc.cpp  Iptc.hpp  Metadata.cpp  Metadata.hpp  MetadataUtils.cpp  MetadataUtils.hpp  error.cpp  error.h  exif.cpp  exif.h  iptc.cpp  iptc.h  metadata.cpp  metadata.h  metadatautils.cpp  metadatautils.h  string.cpp  string.h
src/metadata/structs/: ExifPrintSettings.cpp  (+9 more)
src/raw/: AdvancedRawViewWidget.cpp  AdvancedRawViewWidget.hpp  AdvancedRawWidget.ui  BasicRawScrollArea.ui  BasicRawViewScrollArea.cpp  BasicRawViewScrollArea.hpp  Image.cpp  Image.hpp  PaintDevice.cpp  PaintDevice.hpp  Pixmap.cpp  Pixmap.hpp  RawController.cpp  RawController.hpp  RawImageLoader.cpp  RawImageLoader.hpp  RawLoader.cpp  RawLoader.hpp  RawModel.cpp  RawModel.hpp  RawModelRuntime.cpp  RawModelRuntime.hpp  RawModelSettings.cpp  RawModelSettings.hpp  RawModelValidator.cpp  RawModelValidator.hpp  RawPixmapLoader.cpp  RawPixmapLoader.hpp  RawToolbox.cpp  RawToolbox.hpp  RawView.cpp  RawView.hpp  RawViewAdapter.cpp  RawViewAdapter.hpp  RawViewWidget.cpp  RawViewWidget.hpp  Retranslatable.cpp  Retranslatable.hpp
src/shared/: EffectsConfiguration.cpp  EffectsConfiguration.hpp  Enums.hpp
src/thumbnail/: DetailsThumbnail.cpp  DetailsThumbnail.hpp  MetadataThumbnail.cpp
src/translations/: INSTALL_NEW  sir_cz.ts  sir_de.ts  sir_en.ts  sir_es.ts  sir_fr.ts  sir_gr.ts  sir_hu_HU.ts  sir_nl.ts  sir_pl.ts  sir_pt_BR.ts  sir_ro_RO.ts  sir_ru_RU.ts  sir_sk.ts  sir_sr.ts  translation_info.csv
src/ut/: converteffectstest.cpp  converteffectstest.h  metadatautilstest.cpp  metadatautilstest.h  versiontest.cpp  versiontest.h
src/visitors/: RichTextVisitor.cpp  RichTextVisitor.hpp  Visitable.hpp  Visitor.hpp
src/widgets/: AboutDialog.cpp  AboutDialog.hpp  BrushFrame.cpp  BrushFrame.hpp  ColorFrame.cpp  ColorFrame.hpp  ConvertDialog.cpp  ConvertDialog.hpp  ConvertDialog.ui  ConvertDialogConnector.cpp  ConvertDialogConnector.hpp  DetailsBrowserController.cpp  DetailsBrowserController.hpp  DetailsBrowserView.cpp  DetailsBrowserView.hpp  GradientEditWidget.cpp  GradientEditWidget.hpp  HistoryComboBox.cpp  HistoryComboBox.hpp  MessageBox.cpp  MessageBox.hpp  MetadataDialog.cpp  MetadataDialog.hpp  MetadataDialog.ui  OptionsDialog.cpp  OptionsDialog.hpp  PosSpinBox.cpp  PosSpinBox.hpp  PreviewDialog.cpp  PreviewDialog.hpp  SelectionDialog.cpp  SelectionDialog.hpp  StatusWidget.cpp  StatusWidget.hpp  StatusWidget.ui  TimeComboBox.cpp  TimeComboBox.hpp  TreeWidget.cpp  TreeWidget.hpp  TreeWidgetHeader.cpp  (+41 more)
tests/: CMakeLists.txt  ConvertEffectsTest.cpp  ConvertEffectsTest.hpp  ConvertThreadTest.cpp  ConvertThreadTest.hpp  DetailsThumbnailTest.cpp  DetailsThumbnailTest.hpp  LanguageUtilsTest.cpp  LanguageUtilsTest.hpp  VersionTest.cpp  VersionTest.hpp  converteffectstest.cpp  converteffectstest.h  languageutilstest.cpp  languageutilstest.h  rawgroupboxcontrollertest.cpp  rawgroupboxcontrollertest.h  rawgroupboxtest.cpp  rawgroupboxtest.h  versiontest.cpp  versiontest.h
tests/fake/: CommandLineAssistantFake.cpp  CommandLineAssistantFake.hpp  ConvertThreadFake.cpp  ConvertThreadFake.hpp
tests/image/: QImageLoaderTest.cpp  QImageLoaderTest.hpp
tests/metadata/: MetadataUtilsTest.cpp  MetadataUtilsTest.hpp  metadatautilstest.cpp  metadatautilstest.h
tests/raw/: RawControllerTest.cpp  RawControllerTest.hpp  RawLoaderTest.cpp  RawLoaderTest.hpp  RawModelTest.cpp  RawModelTest.hpp  RawModelValidatorTest.cpp  RawModelValidatorTest.hpp
tests/thumbnail/: DetailsThumbnailTest.cpp  DetailsThumbnailTest.hpp  ThumbnailImageData.cpp  ThumbnailImageData.hpp
tests/widgets/: ConvertDialogTest.cpp  ConvertDialogTest.hpp
(+241 files in other folders)
